# cyclo_manager

./: CHANGELOG.rst  README.md  config.yml  docker-compose.dev.yml  requirements.txt
cyclo_manager/: Dockerfile  Dockerfile.dev  __init__.py  agent_client.py  api.py  config.py  docker_client.py  lifespan.py  models.py  state.py
cyclo_manager/agent/: __init__.py  models.py  s6_agent.py  s6_client.py  utils.py
cyclo_manager/ros2_node/: __init__.py  message.py  node.py
cyclo_manager/routers/: __init__.py  container.py  containers.py  docker.py  root.py  ros2.py  services.py  version.py  websocket.py
cyclo_manager/utils/: __init__.py  versioning.py
cyclo_manager_cli/: README.md  pyproject.toml  setup.cfg
cyclo_manager_cli/cyclo_manager_cli/: __init__.py  cli.py
cyclo_manager_cli/cyclo_manager_cli/config/: config.yml
cyclo_manager_cli/cyclo_manager_cli/docker/: docker-compose.yml
cyclo_manager_ui/: README_UI.md  package-lock.json  package.json
cyclo_manager_ui/app/: globals.css  layout.tsx
cyclo_manager_ui/components/: AppsHubLink.tsx  ConditionalLayout.tsx  ControlToolbar.tsx  CycloManagerUpdateAnnouncement.tsx  FixedLogPanel.tsx  LaunchArgsSettingPopup.tsx  LogViewer.tsx  ManagerPhysicalShortcuts.tsx  Robot3DViewer.tsx  StatusBadge.tsx  ThemeToggle.tsx  TopicViewerPanel.tsx  VSCodeLayout.tsx
cyclo_manager_ui/config/: launchArgs.ts
cyclo_manager_ui/contexts/: AppsHubBannerContext.tsx
cyclo_manager_ui/lib/: api.ts  layout.ts  websocket.ts
cyclo_manager_ui/types/: api.ts
novnc/docker/: Dockerfile.amd64  Dockerfile.arm64
(+12 files in other folders)
